--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This is a repository for HY Full Stack course [part 9](https://fullstackopen.com/en/part9)",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
@@ -20,11 +23,17 @@
   },
   "homepage": "https://github.com/noorary/fspart9typescript#readme",
   "dependencies": {
-    "npm": "^6.14.17"
+    "express": "^4.18.2",
+    "npm": "^9.6.7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
 }
